issues: adjust for visibility fixes #598

--- a/github-dark.css
+++ b/github-dark.css
@@ -1299,7 +1299,7 @@
     .pull-request-tab-content .diff-view .file-header {
       position: sticky !important;
       position: -webkit-sticky !important;
-      top: 39px !important;
+      top: 35px !important;
       z-index: 6 !important;
     }
     .pull-request-tab-content .file-header {
@@ -1307,7 +1307,7 @@
     }
     .pull-request-tab-content .diff-view .file-actions,
     .pull-request-tab-content .diff-view .file-info {
-      margin-top: -2px !important;
+      margin-top: -1px !important;
     }
   }
   /* User time line firsts */
